--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "ethers": "^5",
     "react": "^18.2",
     "react-dom": "^18.2",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
