--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2",
     "react-dom": "^18.2",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
